--- a/blocks/product-categories/product-categories.css
+++ b/blocks/product-categories/product-categories.css
@@ -35,6 +35,10 @@
   height: 10rem
 }
 
+.product-categories-wrapper :is(.h-\[164px\]) {
+  height: 164px
+}
+
 .product-categories-wrapper :is(.min-h-\[40px\]) {
   min-height: 40px
 }
